# ITE4065

./: .gitignore  README.md
lab03/: prime_cond.cpp
project1/: CMakeLists.txt  Joiner.cpp  Operators.cpp  Parser.cpp  Query2SQL.cpp  README.md  Relation.cpp  Utils.cpp  compile.sh  harness.cpp  main.cpp  runMany.sh  runTestharness.sh
project1/include/: Joiner.hpp  Operators.hpp  Parser.hpp  PerfMonitor.hpp  Relation.hpp  ThreadPool.hpp  Utils.hpp  WaitGroup.hpp
project1/test/: TestOperators.cpp  TestParser.cpp  TestRelation.cpp  main.cpp
project1/workloads/small/: gmon.out
project2/: CMakeLists.txt  Makefile  README.md
project2/include/: wfa.hpp
project2/src/: main.cpp  run.cpp  wfa.cpp
project2/test/: CMakeLists.txt  wfa_test.cpp
project3/: README.md  main.cc
project3/bwtree/: CMakeLists.txt
project3/bwtree/include/: bwtree.h  stats.h  tdist.def
project3/bwtree/src/: stats.cc
project3/scripts/: batched_run.sh  run_tests.sh  start.sh  summary.py
project4/: README.md  patchfile
